Terraform/mgmt/sg.tf
resource "aws_security_group" "mgmt_sg" {
  description = "Management Server Security Group"
  name        = "Management Server Security Group"
  vpc_id      = aws_vpc.mgmt_vpc.id
  tags = {
    Name = "Management Security Group"
  }
}

resource "aws_vpc_security_group_ingress_rule" "allow_8080" {
  security_group_id = aws_security_group.mgmt_sg.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 8080
  ip_protocol       = "tcp"
  to_port           = 8080
}
resource "aws_vpc_security_group_ingress_rule" "allow_ssh" {
  security_group_id = aws_security_group.mgmt_sg.id
  cidr_ipv4         = "${chomp(data.http.icanhazip.response_body)}/32"
  from_port         = 22
  ip_protocol       = "tcp"
  to_port           = 22
}

resource "aws_vpc_security_group_egress_rule" "allow_all_traffic_ipv4" {
  security_group_id = aws_security_group.mgmt_sg.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}

resource "aws_vpc_security_group_egress_rule" "allow_all_traffic_ipv6" {
  security_group_id = aws_security_group.mgmt_sg.id
  cidr_ipv6         = "::/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}

data "http" "icanhazip" {
  url = "https://ipv4.icanhazip.com/"

  request_headers = {
    Accept = "text/*"
  }
}
